pedell/400-deploy.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: pedell
  name: pedell
  labels:
    app: pedell

spec:
  replicas: 1
  selector:
    matchLabels:
      app: pedell
  template:
    metadata:
      labels:
        app: pedell
    spec:
      containers:
        - name: pedell
          image: ${PEDELL_IMAGE}:${PEDELL_VERSION}
          ports:
            - name: pedell
              containerPort: 80
