pedell/300-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pedell
  namespace: pedell

spec:
  ports:
    - protocol: TCP
      name: pedell
      port: 80
  selector:
    app: pedell
